attempt 2 at fixing social buttons on iPhone 5s and below

--- a/css/style.css
+++ b/css/style.css
@@ -125,4 +125,4 @@ footer {
     width: 400px; }
 
   .fa {
-    margin: 15px; } }
+    margin: 14px; } }
